Fix modal scroll on IE8

--- a/foundation-skin/src/main/resources/web/css/bootstrap-responsive.css
+++ b/foundation-skin/src/main/resources/web/css/bootstrap-responsive.css
@@ -109,6 +109,10 @@
 }
 
 @media (min-width: 1200px) {
+	.modal-wrapper {
+		left: 13%;
+		width: 73%;
+	}
   .row {
     margin-left: -30px;
     *zoom: 1;
