--- a/foundation-skin/src/main/resources/web/css/bootstrap-scroll-modal.css
+++ b/foundation-skin/src/main/resources/web/css/bootstrap-scroll-modal.css
@@ -6,8 +6,7 @@
  */
 
 .modal-backdrop {
-  overflow-x: hidden;
-  overflow-y: auto;
+  /*This property has been moved to the style attribute created on the js module of scroll-modal. IE8 fix*/
   background-color: rgba(0, 0, 0, 0.8);
 }
 .modal-backdrop.fade {
